# MAGIC

./: .gitignore  CODEX.md  README.md  app.py  crop.py  json_repair.py  main.py  phase2_svg.py  pyproject.toml  run_layered_crops.py  tmp.py  vectorize_single_module.py
app/: README.md  __init__.py  gradio_app.py  pipeline.py
configs/: model_config.yaml
demo_sample/Affordance RAG/: caption.txt  description.md
demo_sample/GENNAV/: caption.txt  description.md
demo_sample/VELA/: caption.txt
demo_sample/VERA/: description.md
templates/: index.html
utils/: ImageCropper.py  InstructionCompletion.py  LayerIsolation.py  PaperBanana.py  PingToSVG.py  eval_toolkits.py  generation_utils.py  paperviz_processor.py
utils/agents/: critic_agent.py  generation_utils.py  planner_agent.py  polish_agent.py  retriever_agent.py  stylist_agent.py  vanilla_agent.py  visualizer_agent.py
